--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,27 @@
     tools:context=".MainActivity">
 
 
-<!--   <com.google.android.material.button.MaterialButton-->
-<!--       android:id="@+id/gSignInBtn"-->
-<!--       android:layout_width="match_parent"-->
-<!--       android:layout_height="match_parent"-->
-<!--       android:text="Namyeong Checking."-->
-<!--       tools:layout_editor_absoluteX="-33dp"-->
-<!--       tools:layout_editor_absoluteY="52dp" />-->
+   <com.google.android.material.button.MaterialButton
+       android:id="@+id/gSignInBtn"
+       android:layout_width="0dp"
+       android:layout_height="0dp"
+       android:layout_marginTop="600dp"
+       android:text="Namyeong Checking."
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.0"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintVertical_bias="0" />
 
-   <fragment
+
+      <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
+       android:layout_height="match_parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
