fragment에 구글 맵 띄우고 마커 및 위도 경도 설정 완료

--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".FragmentOne">
 
-    <androidx.fragment.app.FragmentContainerView
+    <com.google.android.gms.maps.MapView
         android:id="@+id/mapview"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
