구글 맵에 마커 여러 개 띄우기 성공 - 추가 구현 사항 - 현재 위치 띄우기 현재 위치 기반으로 주변 cctv 위치만 보여주기 geocoder로 현재 위치에 대한 주소 보여주기

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,16 +10,13 @@
 
     <ImageButton
         android:id="@+id/googleSignInBtn"
-        android:layout_width="389dp"
+        android:layout_width="0dp"
         android:layout_height="96dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="50dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nightsavior"
         app:layout_constraintVertical_bias="0.0"
@@ -30,32 +27,26 @@
         android:id="@+id/moonimage"
         android:layout_width="357dp"
         android:layout_height="320dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/nightsavior"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.155"
         app:srcCompat="@drawable/moon" />
 
     <TextView
         android:id="@+id/nightsavior"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="166dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginTop="50dp"
         android:text="Night Savior"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/googleSignInBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/moonimage" />
+        app:layout_constraintTop_toBottomOf="@+id/moonimage"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
