--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -8,19 +8,16 @@
     android:background="#C0D2F3"
     tools:context=".FragmentThree">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginEnd="185dp"
-        android:text="3333333333"
-        android:textColor="#000000"
+
+    <ImageButton
+        android:id="@+id/emergencybutton"
+        android:layout_width="415dp"
+        android:layout_height="417dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/emergency"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.31" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
