--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -34,12 +34,15 @@
             android:id="@+id/upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="232dp"
             android:text="업로드"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/logout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.893"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="260dp" />
+            app:layout_constraintTop_toBottomOf="@+id/gallery" />
 
         <ImageView
             android:id="@+id/myimage"
@@ -47,6 +50,7 @@
 
             android:layout_height="160dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.92"
@@ -69,6 +73,7 @@
             android:id="@+id/gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="갤러리"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/upload"
@@ -144,50 +149,77 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="184dp" />
+            app:layout_constraintGuide_end="439dp" />
 
         <EditText
-            android:id="@+id/inputName"
-            android:layout_width="66dp"
-            android:layout_height="27dp"
+            android:id="@+id/editName"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textAlignment="center"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/Name"
             app:layout_constraintTop_toTopOf="@+id/Name"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.375" />
 
         <EditText
-            android:id="@+id/inputAge"
-            android:layout_width="66dp"
-            android:layout_height="27dp"
+            android:id="@+id/editAge"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
             android:layout_marginStart="16dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textAlignment="center"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/Age"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/Age"
             app:layout_constraintTop_toTopOf="@+id/Age"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.562" />
 
         <EditText
-            android:id="@+id/inputGender"
-            android:layout_width="66dp"
-            android:layout_height="27dp"
+            android:id="@+id/editGender"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
             android:layout_marginStart="16dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textAlignment="center"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/Gender"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/Gender"
             app:layout_constraintTop_toTopOf="@+id/Gender"
             app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="44dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toTopOf="@+id/toggleButton"
+            app:layout_constraintEnd_toStartOf="@+id/gallery"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
