--- a/app/src/main/res/layout/dialog_siren.xml
+++ b/app/src/main/res/layout/dialog_siren.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="싸이렌이 재생중입니다." />
+        android:text="사이렌이 재생 중입니다." />
 
     <LinearLayout
         android:layout_width="match_parent"
